--- a/MTGGameSim/main.css
+++ b/MTGGameSim/main.css
@@ -1,4 +1,6 @@
-body {
+html, body {
+    height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -25,3 +27,56 @@ body {
   #menu button:hover {
     background-color: lightgray;
   }
+
+
+.card-zone {
+  background-color: aliceblue;
+  border: 2px black solid;
+}
+
+#container {
+  background-color: transparent;
+}
+
+#card-containers{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 70% 1fr 20% 1fr ;
+  grid-template-rows: 1fr 55% 1fr 30% 1fr;
+}
+
+#deck{
+  grid-row: 2;
+  grid-column: 2;
+  display: grid;
+  grid-template-columns: repeat(1fr, 5);
+  width: 100%;
+  height: 100%;
+}
+
+.sub-card-zone{
+  grid-row: 1;
+  height: 100%;
+  width: 100%;
+}
+
+#sideboard{
+  grid-row: 4;
+  grid-column: 2;
+  display: grid;
+  grid-template-columns: repeat(1fr, 5);
+  width: 100%;
+  height: 100%;
+}
+
+#specialty-cards{
+  grid-row-start: 2;
+  grid-row-end:5;
+  grid-column: 4;
+  width: 100%;
+  height: 100%;
+}
+
