--- a/MTGGameSim/main.css
+++ b/MTGGameSim/main.css
@@ -10,7 +10,7 @@ html, body {
   #menu {
     display: none;
     position: absolute;
-    width: 60px;
+    width: 100px;
     background-color: white;
     box-shadow: 0 0 5px grey;
     border-radius: 3px;
@@ -44,7 +44,7 @@ html, body {
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: 1fr 70% 1fr 20% 1fr ;
+  grid-template-columns: 1fr 75% 1fr 12.5% 1fr ;
   grid-template-rows: 1fr 55% 1fr 30% 1fr;
 }
 
@@ -52,7 +52,7 @@ html, body {
   grid-row: 2;
   grid-column: 2;
   display: grid;
-  grid-template-columns: repeat(1fr, 5);
+  grid-template-columns: repeat(1fr, 6);
   width: 100%;
   height: 100%;
 }
@@ -63,7 +63,7 @@ html, body {
   width: 100%;
 }
 
-#sideboard{
+#specialty-board{
   grid-row: 4;
   grid-column: 2;
   display: grid;
@@ -72,7 +72,7 @@ html, body {
   height: 100%;
 }
 
-#specialty-cards{
+#sideboard{
   grid-row-start: 2;
   grid-row-end:5;
   grid-column: 4;
