--- a/MTGGameSim/main.css
+++ b/MTGGameSim/main.css
@@ -7,6 +7,8 @@ html, body {
     background-color: blanchedalmond;
   }
 
+
+
   #menu {
     display: none;
     position: absolute;
@@ -44,13 +46,15 @@ html, body {
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: 1fr 75% 1fr 12.5% 1fr ;
-  grid-template-rows: 1fr 55% 1fr 30% 1fr;
+  grid-template-columns: 1fr 72% 1fr 12% 1fr 12% 1fr ;
+  grid-template-rows: 3% 45% 1fr 45% 1fr;
 }
 
 #deck{
-  grid-row: 2;
-  grid-column: 2;
+  grid-row-start: 2;
+  grid-row-end: 5;
+  grid-column-start: 2;
+  grid-column-end: 3;
   display: grid;
   grid-template-columns: repeat(1fr, 6);
   width: 100%;
@@ -63,20 +67,52 @@ html, body {
   width: 100%;
 }
 
+.lands{
+  text-align: center;
+  width: 99%;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row: 1;
+  border: 2px solid black;
+  background-color: lightblue;
+  padding: .5%;
+}
+
+input[type="number"]{
+  width: 5%;
+}
+
 #specialty-board{
-  grid-row: 4;
-  grid-column: 2;
+  grid-row-start: 2;
+  grid-row-end: 5;
+  grid-column: 4;
   display: grid;
-  grid-template-columns: repeat(1fr, 5);
+  grid-template-columns: 1fr;
   width: 100%;
   height: 100%;
 }
 
-#sideboard{
+#side-board{
   grid-row-start: 2;
   grid-row-end:5;
-  grid-column: 4;
+  grid-column-start: 6;
+  grid-column-end: 7;
   width: 100%;
   height: 100%;
+}
+
+
+#command-zone-name{
+  grid-row: 1;
+  grid-column: 4;
+  text-align: center;
+  font-size: 200%;
+}
+
+#side-board-name{
+  grid-row: 1;
+  grid-column: 6;
+  text-align: center;
+  font-size: 200%;
 }
 
